0025555: Wrong result of classification of a point relative to solid

Implemented additional verification that the point found by Extrema is placed inside the face. This way turns off searching the additional inner point.

Test case for issue CR25555